# sv2sc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  SYSTEMC_CODE_GENERATION_ISSUES.md  picorv32-build-verify-plan.md  picorv32-key-commands.md  picorv32-project-structure.md  picorv32-quick-start.md  picorv32-verification-checklist.md
.cursor/rules/: project.mdc  sv2sc-build-system.mdc  sv2sc-development.mdc  sv2sc-mlir-implementation.mdc  sv2sc-testing.mdc
.github/workflows/: clang-build.yml
cmake/: ClangToolchain.cmake  CompareDUTSimulations.cmake  CompareSimulations.cmake  Dependencies.cmake  GenerateComprehensiveTestbench.cmake  GenerateSystemCTestbench.cmake  SystemCTestUtils.cmake  ValidateDUTTranslation.cmake  ValidateTranslation.cmake
docs/: ARCHITECTURE.md  BUILD_ERROR_DIAGNOSTIC_REPORT.md  CIRCT_FALLBACK_GENERATOR.md  CIRCT_INTEGRATION_GUIDE.md  CLANG_BUILD_SYSTEM.md  CLANG_TOOLCHAIN_MIGRATION_GUIDE.md  CURRENT_PROJECT_STATUS.md  FINAL_SYNTAX_FIX_REPORT.md  MLIR_INTEGRATION_STATUS.md  NBA_SPLITTING_DESIGN.md  NBA_SPLITTING_FEATURE.md  PHASE4_READINESS_STATUS.md  PICORV32_MLIR_PLAN.md  PICORV32_STATUS_REPORT.md  PICORV32_VERIFICATION.md  PICORV32_VERIFICATION_SUITE.md  README.md  SV2SC_DEVELOPMENT_TODO.md  USER_GUIDE.md  command_list_unique.csv  picorv32-quick-start.md
docs/archive/: E2E_TEST_RESULTS.md  ENHANCED_CIRCT_INTEGRATION_STATUS.md  MLIR_CIRCT_INTEGRATION.md  MLIR_IMPLEMENTATION_STATUS.md  MLIR_PHASE2_COMPLETE.md  MLIR_PHASE3_PROGRESS.md  NBA_SPLITTING_COMPLETE.md  NBA_SPLITTING_IMPLEMENTATION.md  PICORV32_BUILD_STATUS.md  POST_BUILD_VALIDATION_PROCEDURES.md  SYNTAX_FIXES_SUMMARY.md  VCS_COMMAND_IMPLEMENTATION_PLAN.md  picorv32-build-verify-plan.md  picorv32-key-commands.md  picorv32-project-structure.md  picorv32-verification-checklist.md
docs/md@slang/: 00-api-overview.md  01-core-compilation-apis.md  (+5 more)
md@slang/: 00-api-overview.md  01-core-compilation-apis.md  02-ast-visitor-apis.md  03-expression-apis.md  04-type-system-apis.md  05-preprocessing-apis.md  README.md
src/: CMakeLists.txt  main.cpp  sv2sc.cpp
src/codegen/: CMakeLists.txt  systemc_generator.cpp  template_engine.cpp
src/core/: CMakeLists.txt  ast_visitor.cpp
src/mlir/: CMakeLists.txt  MLIRContextManager.cpp  MLIRTranslator.cpp  SVToHWBuilder.cpp
src/mlir/passes/: HWToSystemCLoweringPass.cpp  PrepareHWForSystemCPass.cpp
src/mlir/pipeline/: SV2SCPassPipeline.cpp
src/mlir/systemc/: CIRCTCompatibleEmitter.cpp  CIRCTCompatibleEmitter.h  SystemCEmissionPatterns.cpp  SystemCEmissionPatterns.h  SystemCEmitter.cpp
src/translator/: CMakeLists.txt  vcs_args_parser.cpp
src/utils/: CMakeLists.txt  error_reporter.cpp  logger.cpp  performance_profiler.cpp
templates/: systemc_module.h.template
tests/: CLEANUP_SUMMARY.md  CMakeLists.txt  COMPLETE_TESTBENCH_VERIFICATION_SYSTEM.md  REORGANIZATION_SUMMARY.md  SYSTEMVERILOG_CONSOLIDATION_SUMMARY.md  TEST_VERIFICATION_SUMMARY.md
tests/basic_tests/: CMakeLists.txt  assert_hierarchy.hier  core.sv  coverage_exclude.exclude  coverage_hierarchy.hier  design1.sv  design2.sv  design3.v  library_module.sv  optimization.config  power_config.upf  testbench.sv  verification.ova
tests/basic_tests/relative/path/: design.sv
tests/data/: advanced_list.lst
tests/data/file_lists/: advanced_list.lst  basic_design.f  commented_vars.f  comments_and_empty.f  core_modules.f  core_modules_commented.f  env_var_braces.f  env_var_dollar.f  gui_config.cfg  home_var.f  library.liblist  library.map  memory_interfaces.f  mixed_env_vars.f  modules_interfaces.f  multiext.files  multiext.list  non_existent_files.f  quoted_filenames.f  relative_and_absolute.f  testbench_design.f  testbench_modules_commented.f  undefined_var.f  whitespace_handling.f  with_comments.f
tests/data/vcs_test_files/: core_modules.sv  interfaces.sv  memory.sv
tests/data/vcs_test_files/relative/path/: design.sv
tests/examples/: CMakeLists.txt  test_circt_fallback_demo.cpp
tests/examples/advanced_features/: CMakeLists.txt  advanced_constructs.sv  alu_dut.sv  alu_tb.sv  error_test.sv  fsm_dut.sv  fsm_tb.sv  interface_dut.sv  interface_tb.sv  performance_test.sv  pipeline_dut.sv  pipeline_tb.sv  template_test.sv
tests/examples/basic_counter/: CMakeLists.txt  counter.sv  counter_tb.sv
tests/examples/circt_fallback_test/: CMakeLists.txt  simple_module.sv  test_circt_fallback.cpp
tests/examples/generate_example/: CMakeLists.txt  generate_adder.sv  generate_adder_tb.sv
tests/examples/memory_array/: CMakeLists.txt  memory.sv  memory_tb.sv
tests/examples/picorv32/: CMakeLists.txt
tests/functional_tests/: CMakeLists.txt  test_sv2sc_functional.cpp
tests/integration/: CMakeLists.txt  final_syntax_test.sh  test_nba_splitting.sv  test_sensitivity_extraction.sv  test_translation_flow.cpp
tests/integration_tests/: CMakeLists.txt  e2e_simple_test.sh  test_mlir_integration.cpp  test_separate_compilation.cpp  test_systemc_emitter_integration.cpp
tests/performance/: nba_splitting_benchmark.cpp
tests/performance_tests/: CMakeLists.txt
tests/security_tests/: CMakeLists.txt  test_security_validation.cpp
tests/unit/: CMakeLists.txt  test_systemc_generator.cpp  test_vcs_args_parser_phase1.cpp  test_vcs_args_parser_phase2.cpp  test_vcs_args_parser_phase3.cpp  test_vcs_args_parser_phase4.cpp
tests/unit_tests/: CMakeLists.txt  test_automation_framework.cpp  test_circt_compatible_emitter.cpp  test_data_manager.cpp  test_data_manager.h  test_mlir_build_verification.cpp  test_vcs_args_parser.cpp  test_vcs_args_parser_phase1.cpp  test_vcs_args_parser_phase2.cpp  test_vcs_args_parser_phase3.cpp  test_vcs_args_parser_phase4.cpp
tests/verification/picorv32/: run_e2e_test.sh
tests/verification/picorv32/test_programs/: arithmetic_test.S  branch_test.S  interrupt_test.S  memory_test.S  simple_test.S
tests/verification_tests/: CMakeLists.txt
tests/verification_tests/picorv32/: CMakeLists.txt
tests/verification_tests/picorv32/scripts/: compare_outputs.py  run_comparison.sh
tests/verification_tests/picorv32/testbench/: systemc_testbench.cpp  verilator_testbench.cpp
(+15 files in other folders)
